# jweb

./: .envrc  .gitignore  .session.aes  CHANGELOG.md  flake.nix  justfile  jweb.cabal  package-lock.json  package.json  spago.yaml  tailwind.config.js  tsconfig.json
.github/workflows/: docker.yaml  release-please.yaml  test.yaml
app/: Main.hs
config/: routes.yesodroutes
lib/: Application.hs  Foundation.hs  Model.hs  Whitelist.hs
lib/Handler/: Auth.hs  Date.hs  Docs.hs  Home.hs  Post.hs  Static.hs  System.hs  Tag.hs  Trash.hs  Version.hs
lib/Jweb/: Types.hs
lib/Template/: Date.hs
specification/: specification.yaml
src/: Application.hs  Foundation.hs  Main.purs  Model.hs  Whitelist.hs
src/Handler/: Auth.hs  Home.hs  Post.hs  Static.hs  Tag.hs  Trash.hs
static/: output.css  style.css
test/: Playwright.purs  Playwright.ts
test/Test/: Main.purs  NewTagSelected.purs  Title.purs  Util.purs
